# kasperskyos-ipc-fuzzing

./: .gitignore  Makefile  README.md
coverage_mapper/: CMakeLists.txt
coverage_mapper/include/: coverage_mapper_reciever.h  shared_memory_buffer.h
coverage_mapper/src/: provider.cpp  reciever.cpp  shared_memory_buffer.cpp
coverage_mapper/xdl/: CoverageMapper.cdl  ICoverageMapper.idl
generator/: CMakeLists.txt
idl_to_fuzztest/: pyproject.toml
idl_to_fuzztest/src/idl_to_fuzztest/: __init__.py  __main__.py  cli.py  core.py  nk_driver.py
runner/: CMakeLists.txt
runner/include/: common.h  handle_storage.h
runner/src/: main.cpp
runner/xdl/: FuzztestRunner.edl
runtime/: CMakeLists.txt
runtime/coverage_collector/: CMakeLists.txt  coverage_collector.cpp
tests/: CMakeLists.txt
tests/asan/: CMakeLists.txt
tests/asan/echo_server/: CMakeLists.txt  Echo.edl  main.cpp
tests/asan/einit/: init.yaml.in
tests/asan/fuzzer/: CMakeLists.txt  Fuzzer.edl  test.cpp
tests/base/: CMakeLists.txt
tests/base/echo_server/: CMakeLists.txt  IEcho.idl  main.cpp
tests/base/fuzzer/: CMakeLists.txt  test.cpp
tests/handles/: CMakeLists.txt
tests/handles/echo_server/: CMakeLists.txt  IEcho.idl  main.cpp
tests/handles/fuzzer/: test.cpp
tests/logrr/: CMakeLists.txt
tests/logrr/einit/: CMakeLists.txt  init.yaml.in  security.psl.in
tests/logrr/fuzzer/: CMakeLists.txt  test.cpp
tests/logrr/logrr_server/: CMakeLists.txt
tests/types_support/: CMakeLists.txt
tests/types_support/echo_server/: IEcho.idl  main.cpp
tests/types_support/einit/: CMakeLists.txt
tests/types_support/fuzzer/: test.cpp
tests/ubsan/: CMakeLists.txt
tests/ubsan/echo_server/: CMakeLists.txt  main.cpp
tests/ubsan/einit/: security.psl.in
tests/ubsan/fuzzer/: test.cpp
