[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idl_to_fuzztest"
version = "0.1.0"
description = "A utility to generate fuzztest fixtures by KasperskyOS idl files"
authors = [
    { name = "andrejj", email = "varenov27@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
idl_to_fuzztest = "idl_to_fuzztest.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["idl_to_fuzztest"]
